# k1

./: Cargo.toml
kernel/: config.hlsli  kernel.hlsl
kernel/bsdf/: brdf.hlsli  lambertian.hlsli
kernel/camera/: thin_lens.hlsli
kernel/container/: stack.hlsli
kernel/geometry/: intersection.hlsli  ray.hlsli  sphere.hlsli  triangle.hlsli  vector.hlsli
kernel/integrator/: path_tracer.hlsli
kernel/math/: constants.hlsli
kernel/random/: source.hlsli
src/: main.rs
