[package]
name = "k1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytemuck = { version = "1.13", features = ["derive"] }
hassle-rs = "0.10"
png = "0.17"
pollster = "0.2"
wgpu = "0.15"
